Fix message box on iOS

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -12,6 +12,12 @@
   }
 }
 
+.platform-ios {
+    .form-message {
+        bottom: 50px;
+    }
+}
+
 .icon-send {
   font-size: 24px;
 }
